# OpenEvScaler

./: .gitignore  Dockerfile  LICENSE  README.md  index.html  inference.py  metadata.json  openenv.yaml  package-lock.json  package.json  pyproject.toml  server.ts
server/: app.py
src/: App.tsx  index.css
