[project]
name = "openevscaler"
version = "0.1.0"
description = "Patent claim scope analyzer environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
